# KinectFusion

./: .gitignore  CMakeLists.txt  Data  Frame.cpp  Frame.h  FreeImageHelper.cpp  FreeImageHelper.h  MarchingCubes.h  Mesh.h  Pose_estimation.cpp  Pose_estimation.cu  Pose_estimation.h  README.md  RayCasting.cpp  RayCasting.h  SimpleMesh.h  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  VirtualSensor.h  Voxels.cpp  Voxels.h  main.cpp  util.h
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.laptop-p4dq2luh_32439/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.laptop-p4dq2luh_32439/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.laptop-p4dq2luh_32439/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.laptop-p4dq2luh_32439/H.local_16/: node.properties
cuda/: Pose_estimation_cuda.cu  Pose_estimation_cuda.h  device_check  device_check.cpp  ray_casting_cuda.cu  ray_casting_cuda.cuh
include/: Frame.h  Mesh.h  PointCloud.h  Pose_estimation.h  SimpleMesh.h  VirtualSensor.h  Voxels.h  ray_casting_cuda.h  util.h
src/: Pose_estimation.cpp  SurfaceReconstruction.cpp  Voxels.cpp
src/cuda/: ray_casting_cuda.cu
test/: CMakeLists.txt  Generate_mesh.py  Voxel_tests.cpp  cube_1.off  cube_2.off  test_fusion.cpp
tests/: tsdf_val.txt
